fixed no unit on grid gap

--- a/styles/small.css
+++ b/styles/small.css
@@ -1,7 +1,7 @@
 @media (max-width: 400px){
     body{    
         justify-content: center;
-        grid-gap:10;
+        grid-gap:10px;
         margin: 0;
     }
     .navigation {
